--- a/Introduction.tex
+++ b/Introduction.tex
@@ -58,7 +58,7 @@ This paper is an extension of \cite{AL12}. We extract a resolution solver based 
 
 
 
-\textbf{Safety and Performance of the European Rail Traffic Management System: A Modelling and Verification Exercise in Real Time Maude (extended abstract with Berger, Roggenbach and Seisenberger), WADT 2014 \cite{AL14c}} We present a
+\textbf{Safety and Performance of the European Rail Traffic Management System: A Modelling and Verification Exercise in Real Time Maude (extended abstract with Berger, Roggenbach and Seisenberger), WADT 2014 \cite{AL14c}} We present an approach to model ERTMS in such a way as to capture performance aspects of the system in an executable specification to which we can apply model checking to verify safety properties. Two examples are presented: the first consists of two trains that travel round a closed track in the shape of a pentagon, the second example takes the shape of the small junction from which trains can enter and leave. In the pentagon example we verify the safety property that the movement authorities of the two trains do not overlap which implies that they do not crash. In the second example we verify the safety property that the point does not move whilst it is in a movement authority i.e. the train does not derail.
 
 
 \section{Thesis Outline}
