--- a/Introduction.tex
+++ b/Introduction.tex
@@ -24,7 +24,7 @@ Program extraction is another verification technique which allows the production
 \end{comment}
 
 
-The Railway Verification Group at the Computer Science Department of Swansea University has been researching the development of formal methods for use in real world situations in particular for the development of train control systems. The majority of this work has been in the form of an industrial collaboration with our partner Siemens Rail Automation (UK). Siemens are continuously modernising and improving their development processes and as a part of this are looking to use formal methods for the development of their systems. The Westrace interlocking is one such system that is being considered for treatment by formal methods. These interlockings have the benefits of being large but relatively un-complex and developed has to comply to the same range of safety requirements.  Another product currently under development by Siemens Rail Automation is the European Rail Traffic Management System (ERTMS). This system is developed to a European  standard with each country or individual company producing their own implementation. Since the specification is loose and allows for a wide range for implementations this makes modelling of the system desirable to understand possible behaviours and to ensure safe integration with existing infrastructure. Furthermore, it is an open field  when it comes to substantiating the claim that the ERTMS approach offers a higher performance of the railway compared to the traditional control systems.
+The Railway Verification Group at the Computer Science Department of Swansea University (\url{http://www.cs.swan.ac.uk/Rail/}) has been researching the development of formal methods for use in real world situations in particular for the development of train control systems. The majority of this work has been in the form of an industrial collaboration with our partner Siemens Rail Automation (UK). Siemens are continuously modernising and improving their development processes and as a part of this are looking to use formal methods for the development of their systems. The Westrace interlocking is one such system that is being considered for treatment by formal methods. These interlockings have the benefits of being large but relatively un-complex and developed has to comply to the same range of safety requirements.  Another product currently under development by Siemens Rail Automation is the European Rail Traffic Management System (ERTMS). This system is developed to a European  standard with each country or individual company producing their own implementation. Since the specification is loose and allows for a wide range for implementations this makes modelling of the system desirable to understand possible behaviours and to ensure safe integration with existing infrastructure. Furthermore, it is an open field  when it comes to substantiating the claim that the ERTMS approach offers a higher performance of the railway compared to the traditional control systems.
 
 
 
@@ -32,59 +32,61 @@ The Railway Verification Group at the Computer Science Department of Swansea Uni
 \section{Results of the Thesis}
  
 
-The first result of this thesis (Chapter 4/5) is the use of program extraction to obtain a verified DPLL SAT solving algorithm that can solve industrial sized problems in the form of verifying solid state interlockings following the approach set out in \cite{AL14a}. We have named the resulting SAT solver X-SAT and show that its performance is comparable with other verified SAT algorithms. This case study opens up a new area of application for program extraction to obtain verified SAT and resolution algorithms and has been published in \cite{AL12,AL14b}. This is one of the largest case studies so far in the area of program extraction and demonstrates that it can be used for practical purposes.  One of the biggest arguments against the use of program extraction is that one loses control over the efficiency of the program. We have demonstrated that it is possible to carry out efficiency considerations at the proof level and therefore obtain a more efficient extracted program. We demonstrate that it is possible to modify the SAT proof system and extract a more advanced SAT algorithm that implements an optimisation called clause learning. We also demonstrate that it is possible to extract a resolution algorithm based on our original DPLL SAT solver.
+The first result of this thesis (Chapter 4/5) is the use of program extraction to obtain a verified DPLL SAT solving algorithm that can solve industrial sized problems in the form of verifying solid state interlockings following the approach set out in \cite{AL14a}. We have named the resulting SAT solver X-SAT and show that its performance is comparable with other verified SAT algorithms. This case study opens up a new area of application for program extraction to obtain verified SAT and resolution algorithms and has been published in \cite{AL12,AL14b}. This is one of the largest case studies so far in the area of program extraction and demonstrates that the technique can be used for practical purposes.  One argument against the use of program extraction is that one loses control over the efficiency of the program. We have demonstrated that it is possible to carry out efficiency considerations at the proof level and therefore obtain a more efficient extracted program. 
+
+We also demonstrate that it is possible to modify the SAT proof system and extract a more advanced SAT algorithm that implements an optimisation called clause learning. Finally, we demonstrate that it is possible to extract a resolution algorithm based on our original DPLL SAT solver (end of chapter 4).
 
 
-The second result of this thesis is the modelling of the European Rail Traffic Management System and verification of its safety and performance using Real Time Maude. First, we formalised the ERTMS system, controlling an example railway in the form of a pentagon, as several hybrid automata in order to capture its behaviour.  This pentagon example along with a small junction were then modelled as Real Time Maude specifications. In our model, speed, acceleration, braking behaviour and track length are integral parts, as even safety cannot be decided without these properties. The inclusion of these properties in the model enables the performance of this system to be analysed by executing the Real Time Maude specifications. This is also the first formalisation of ERTMS to capture the interlocking, radio block processor, train and the communications between them. The interface between the interlocking and the radio block processor, in particular, has yet to be examined in detail even though it plays a crucial role in the safety of the overall system.
+The second set of  results of this thesis is the modelling of the European Rail Traffic Management System and verification of its safety and performance using Real Time Maude. First, we formalised the ERTMS system, controlling an example railway in the form of a pentagon, as several hybrid automata in order to capture its behaviour.  This pentagon example along with a small junction were then modelled as Real Time Maude specifications. In our model, speed, acceleration, braking behaviour and track length are integral parts, as even safety cannot be decided without these properties. The inclusion of these properties in the model enables the performance of this system to be analysed by executing the Real Time Maude specifications. This is also the first formalisation of ERTMS to capture the interlocking, radio block processor, train and the communications between them. The interface between the interlocking and the radio block processor, in particular, has yet to be examined in detail even though it plays a crucial role in the safety of the overall system.
 
 \section{Publications}
 Material from the following publications formed part of my MRes thesis and influenced work in this thesis:
 
-\textbf{Verification of Railway Interlockings in SCADE (extended abstract with Seisenberger), AVOCS 2010 \cite{AL10}} 
+\textbf{\ul{Verification of Railway Interlockings in SCADE} (extended abstract with Seisenberger), AVOCS 2010 \cite{AL10}} 
 Two approaches are described to model and verify train control systems using the industrial modelling and verification tool SCADE~\cite{Scade}. The first involves the translation of ladder logic into the SCADE language and then applying SCADE's built in model checker to verify safety properties. The second approach involves segment of railway in a modular fashion allowing for the individual components to be verified before being combined together.
 
 
-\textbf{Verification of Solid State Interlocking Programs (with Chadwick, James, Kanso, Moller, Roggenbach and Seisenberger), FM-Rail-BOK, \cite{AL14a}}
+\textbf{\ul{Verification of Solid State Interlocking Programs} (with Chadwick, James, Kanso, Moller, Roggenbach and Seisenberger), FM-Rail-BOK, \cite{AL14a}}
 This paper aims to provide a complete body of knowledge on the subject of verifying ladder logic programs for solid state interlockings. It contains the combined work of three MRes theses and associated research papers condensed to form a single methodology.
 
 Material from the following publications forms part of this thesis:
 
-\textbf{Extracting a DPLL Algorithm (with Berger and Seisenberger), MFPS 2012, \cite{AL12}}
+\textbf{\ul{Extracting a DPLL Algorithm} (with Berger and Seisenberger), MFPS 2012, \cite{AL12}}
 The formalisation of the DPLL proof system and its completeness are described along with the use of non-computational quantifiers to optimise the extracted program. The extracted program is run as a term inside the Minlog system on pigeon hole formulae.
 
 
-\textbf{Extracting Verified Decision Procedures: DPLL and Resolution (with Berger, Nordval Forsberg and Seisenberger), LMCS accepted for publication \cite{AL14b}}
+\textbf{\ul{Extracting Verified Decision Procedures: DPLL and Resolution} (with Berger, Nordval Forsberg and Seisenberger), LMCS accepted for publication \cite{AL14b}}
 This paper is an extension of \cite{AL12}. We extract a resolution solver based on the DPLL solver by showing that DPLL derivability implies derivability in the resolution proof calculus. The extracted program was translated into the function programming language Haskell and a comparison was performed with another verified SAT solver Versat and the industrial tool SCADE. The extracted solver was additionally applied to the verification of solid state interlocking programs following the methodology set out in \cite{AL14a}.
 
 
 
-\textbf{Safety and Performance of the European Rail Traffic Management System: A Modelling and Verification Exercise in Real Time Maude (extended abstract with Berger, Roggenbach and Seisenberger), WADT 2014 \cite{AL14c}} We present an approach to model ERTMS in such a way as to capture performance aspects of the system in an executable specification to which we can apply model checking to verify safety properties. Two examples are presented: the first consists of two trains that travel round a closed track in the shape of a pentagon, the second example takes the shape of the small junction from which trains can enter and leave. In the pentagon example we verify the safety property that the movement authorities of the two trains do not overlap which implies that they do not crash. In the second example we verify the safety property that the point does not move whilst it is in a movement authority i.e. the train does not derail.
+\textbf{\ul{Safety and Performance of the European Rail Traffic Management System: A Modelling and Verification Exercise in Real Time Maude} (extended abstract with Berger, Roggenbach and Seisenberger), WADT 2014 \cite{AL14c}} We present an approach to model ERTMS in such a way as to capture performance aspects of the system in an executable specification to which we can apply model checking to verify safety properties. Two examples are presented: the first consists of two trains that travel round a closed track in the shape of a pentagon, the second example takes the shape of the small junction from which trains can enter and leave. In the pentagon example we verify the safety property that the movement authorities of the two trains do not overlap which implies that they do not crash. In the second example we verify the safety property that the point does not move whilst it is in a movement authority i.e. the train does not derail.
 
 
 \section{Thesis Outline}
 
 %%\textbf{Chapter 1}: This introduction. 
 %%\medskip \\
-\textbf{Chapter 2}: Provides an overview of the formal foundations of the Minlog interactive theorem prover and program extraction. This is background information.
+\textbf{\ul{Chapter 2}}: Overview of the formal foundations of the Minlog interactive theorem prover and program extraction. This is background information.
 \medskip \\
-\textbf{Chapter 3}: Provides an overview of SAT solving, including the DPLL algorithm and  proof system, clause learning and resolution. This is background information.
+\textbf{\ul{Chapter 3}}: Overview of SAT solving, including the DPLL algorithm and  proof system, clause learning and resolution. This is background information.
 \medskip \\
-\textbf{Chapter 4}: Describes the proof of soundness and completeness for the DPLL and resolution proof systems. The completeness proofs are new.
+\textbf{\ul{Chapter 4}}: Proof of soundness and completeness for the DPLL and resolution proof systems. The completeness proofs are new.
 \medskip  \\
-\textbf{Chapter 5}: Describes the formalisation of the DPLL and Resolution proof systems along with their soundness and completeness in the Minlog System. The proof of completeness for the DPLL proof system forms the basis of our extracted SAT solver X-SAT. The final part of this section describes the behaviour of the extracted program X-SAT which is compared with another verified solver. The formalisation and extraction presented in this section are new results.
+\textbf{\ul{Chapter 5}}: Formalisation of the DPLL and Resolution proof systems along with their soundness and completeness (as described in Chapter 4) in the Minlog System. The proof of completeness for the DPLL proof system forms the basis of our extracted SAT solver X-SAT. The final part of this section describes the behaviour of the extracted program X-SAT which is compared with another verified solver. The formalisation and extraction presented in this section are new results.
 \medskip \\ 
-\textbf{Chapter 6}: Describes an approach to extract a prototype conflict driven clause learning SAT algorithm by modifying the DPLL proof system. This is a new formalisation.
+\textbf{\ul{Chapter 6}}: Describes an approach to extract a prototype conflict driven clause learning SAT algorithm by modifying the DPLL proof system. This is a new formalisation.
 \medskip \\
-\textbf{Chapter 7}: Provides a general introduction to the traditional railway domain. This is background information.
+\textbf{\ul{Chapter 7}}: A general introduction to the traditional railway domain. This is background information.
 \medskip \\
-\textbf{Chapter 8}: Provides an overview of the model checking techniques used in this thesis for verification. This is background information. \medskip \\
-\textbf{Chapter 9}: Provides a description of the European Rail Traffic Management System. This is background information.
+\textbf{\ul{Chapter 8}}: Overview of the model checking techniques used in this thesis for verification. This is background information. \medskip \\
+\textbf{\ul{Chapter 9}}: A description of the European Rail Traffic Management System. This is background information.
 \medskip \\
-\textbf{Chapter 10}: Describes the formalisation of the European Rail Traffic Management System as 3 hybrid automata. This is a new formalisation.
+\textbf{\ul{Chapter 10}}: Formalisation of the European Rail Traffic Management System as 3 hybrid automata. This is a new formalisation.
 \medskip \\
-\textbf{Chapter 11}: Describes how the European Rail Traffic Management System can be modelled as a Real Time Maude specification  specification. This is a new modelling approach.
+\textbf{\ul{Chapter 11}}: The European Rail Traffic Management System is modelled as a Real Time Maude  specification (Based on the formalisation in Chapter 10). This is a new modelling approach.
 \medskip \\
-\textbf{Chapter 12}: Validates the Real Time Maude specification of ERTMS using simulation via execution of the specification and describes the verification of the specification using the Maude LTL model checker. This is a new simulation and verification approach.
+\textbf{\ul{Chapter 12}}: Validates the Real Time Maude specification of ERTMS (from Chapter 11) using simulation via execution of the specification and describes the verification of the specification using the Maude LTL model checker. This is a new simulation and verification approach.
 
 
 \medskip
@@ -137,10 +139,7 @@ Hard disk: &  750GB 7200 RPM  SATA\\  \hline
 The Minlog implementations described in Chapters \ref{chapter:dpllminlog} and \ref{chapter:cdclproof} and Real Time Maude implementations described in \ref{chap:modelertms} and \ref{chap:verifyertms} are available at \url{http://cs.swan.ac.uk/~csal/phd/index.html}.
 
 \section{Acknowledgements}
-There are a great many who have supported me or contributed in some way throughout the writing of this thesis. I would first and foremost like to thank my supervisor Monika Seisenberger for her eternal patience and guidance. She introduced me to both of the tools used in this thesis.
-
-
-Siemens Rail Automation/ Invensys Rail deserve many thanks for their support and valuable technical input throughout the whole of my research career.
+There are a great many who have supported me or contributed in some way throughout the writing of this thesis. I would first and foremost like to thank my supervisor Monika Seisenberger for her eternal patience and guidance. She has mentored me since my undergraduate degree and moulded me into the research I am today. Siemens Rail Automation/ Invensys Rail deserve many thanks for their support and valuable technical input throughout the whole of my research career.
  
 
 My mother Sharon Lawrence provided me with many cooked meals and washed my clothes during my stay at her house; this enabled me to spend even more of my time on the writing of this thesis.
