--- a/Main.tex
+++ b/Main.tex
@@ -25,7 +25,7 @@
 \usepackage{booktabs}
 \usepackage{makeidx}
 \usepackage{nth}
-
+\usepackage{soul}
 
 \newcommand*\justify{%
   \fontdimen2\font=0.4em% interword space
@@ -386,7 +386,7 @@ Signed:
 \mbox{}
 
 \newpage
-
+\dominitoc
 \tableofcontents
 
 
