--- a/Introduction.tex
+++ b/Introduction.tex
@@ -138,7 +138,7 @@ Hard disk: &  750GB 7200 RPM  SATA\\  \hline
 The Minlog implementations described in Chapters \ref{chapter:dpllminlog} and \ref{chapter:cdclproof} and Real Time Maude implementations described in \ref{chap:modelertms} and \ref{chap:verifyertms} are available at \url{http://cs.swan.ac.uk/~csal/phd/index.html}.
 
 \section{Acknowledgements}
-There are a great many who have supported me or contributed in some way throughout the writing of this thesis. I would first and foremost like to thank my supervisor Monika Seisenberger for her eternal patience and guidance. She has mentored me since my undergraduate degree and moulded me into the research I am today. Siemens Rail Automation/ Invensys Rail deserve many thanks for their support and valuable technical input throughout the whole of my research career. In particular I would like to thank Simon Chadwick for organising the collaboration from the Siemen's end and for dealing with my queries and questions via email. My mother Sharon Lawrence provided me with many cooked meals and washed my clothes during my stay at her house in the summer of 2014; this enabled me to spend even more of my time on the writing of this thesis.
-Fredrik Nordvall Forsberg has made several contributions to this thesis. Firstly, he wrote the automatic translation which enabled Minlog terms to be translated into Haskell during a stay at  LMU Munich with Prof. Helmut Schwichtenberg.  I would have been unable to perform such an in-depth analysis of the extracted program without it. He was also a co-author on a paper and acted with a large amount professionalism throughout the writing period. Ulrich Berger has provide his expert guidance numerous times both as an co-author and as a second supervisor during Monika's maternity leave. Markus Roggenbach also acted as a second supervisor during Monika's maternity leave. Amongst other things Markus introduced me to Hybrid Automata as well as provided valuable knowledge on the Railway Domain.  Alison Jones for sharing her in-depth understanding of the English language and for proof reading my thesis.
+There are a great many who have supported me or contributed in some way throughout the writing of this thesis. I would first and foremost like to thank my supervisor Dr Monika Seisenberger for her eternal patience and guidance. She has mentored me since my undergraduate degree and moulded me into the research I am today. Siemens Rail Automation/ Invensys Rail deserve many thanks for their support and valuable technical input throughout the whole of my research career. In particular I would like to thank Simon Chadwick for organising the collaboration from the Siemen's end and for dealing with my queries and questions via email. My mother Sharon Lawrence provided me with many cooked meals and washed my clothes during my stay at her house in the summer of 2014; this enabled me to spend even more of my time on the writing of this thesis.
+Dr Fredrik Nordvall Forsberg has made several contributions to this thesis. Firstly, he wrote the automatic translation which enabled Minlog terms to be translated into Haskell during a stay at  LMU Munich with Prof. Helmut Schwichtenberg.  I would have been unable to perform such an in-depth analysis of the extracted program without it. He was also a co-author on a paper and acted with a large amount professionalism throughout the writing period. Dr Ulrich Berger has provide his expert guidance numerous times both as an co-author and as a second supervisor during Monika's maternity leave. Dr Markus Roggenbach also acted as a second supervisor during Monika's maternity leave. Amongst other things Markus introduced me to Hybrid Automata as well as provided valuable knowledge on the Railway Domain.  Alison Jones for sharing her in-depth understanding of the English language and for proof reading my thesis.
 
 
