--- a/lit.bib
+++ b/lit.bib
@@ -290,6 +290,20 @@
   publisher = {Springer}
 }
 
+@INPROCEEDINGS{UB95,
+  author = {Berger, U. and Schwichtenberg, H.},
+  title = {Program extraction from classical proofs},
+  booktitle = {Logic and Computational Complexity},
+  year = {1995},
+  editor = {Leivant, D.},
+  volume = {960},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {77--97},
+  publisher = {Springer Berlin Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.08.25}
+}
+
 @ARTICLE{UB01,
   author = {Berger, U. and Schwichtenberg, H. and Seisenberger, M.},
   title = {The {W}arshall Algorithm and {D}ickson's Lemma: Two Examples of Realistic
