--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -62,8 +62,8 @@ Blah
 \end{mydef}
 
 \end{comment}
-\section{Formal Foundations of Minlog}
-In the following section we shall discuss in more detail the underlying logical foundations on which the interactive theorem prover Minlog is based. The proof calculus used by Minlog is the natural deduction proof system which was introduced by Gentzen in 1939 \cite{GG69}. He was looking to capture the method by which humans naturally reason in a logical formalism.  The resulting system is very general and allows for new facts to be deduced from what is previously known in an manner designed to be intuitive for mathematicians.  The particular version of natural deduction used is the variant for minimal logic which is suited for program extraction as its constituent proofs are constructive. This is then extended to classical logical in a constructive manner. In the following we present the natural deduction proof system together with the proof terms derived from each rule:  \medskip
+\section{Natural Deduction}
+In the following sections we shall discuss in more detail the underlying logical foundations on which the interactive theorem prover Minlog is based. The proof calculus used by Minlog is the natural deduction proof system which was introduced by Gentzen in 1939 \cite{GG69}. He was looking to capture the method by which humans naturally reason in a logical formalism.  The resulting system is very general and allows for new facts to be deduced from what is previously known in an manner designed to be intuitive for mathematicians.  The particular version of natural deduction used is the variant for minimal logic which is suited for program extraction as its constituent proofs are constructive. This is then extended to classical logical in a constructive manner. In the following we present the natural deduction proof system together with the proof terms derived from each rule:  \medskip
 %
 \begin{mydef}[Natural Deduction for Minimal Logic] 
 The natural deduction proof system for minimal logic  consists of the following derivation terms for $\wedge$, $\to$ and $\forall$: 
@@ -164,7 +164,7 @@ Minlog also allows for the use of the \emph{ex falso quodlibet} rule in order to
 \end{center}
 \end{mydef}
 
-The stability rule is also included in the Minlog system, although I have not used it in any proofs in this thesis, it is used to obtain classical logic.
+The stability rule is also included in the Minlog system, although I have not used it in any proofs in this thesis, it is used to obtain classical logic. The Minlog system contains mechanisms to perform program extraction from classical proofs \cite{UB95}. 
 \medskip
 \begin{mydef}[The Stability Rule] \hspace*{0pt} \\
 \begin{center}
@@ -237,12 +237,23 @@ derivation & term \\ \hline
 \end{tabular}
 \end{center}
 
+\begin{myremark}[Minlog Specifics]
+The following is a list of implementations specifics which describe the particular way in which the Minlog system implements program extraction:
 
-\section{Program Extraction}
+\begin{itemize}
+\item The disjunction $\vee$ operation is defined as an inductive defined predicate \texttt{ori} using axioms to capture the proofs rules from Def. \ref{} 
 
-In the following section we shall give an overview of theoretical foundations of program extraction as it is implemented in the interactive theorem prover Minlog. We shall begin by defining the type of a formula such that if the formula is proven the type corresponds to the type of the extracted program from the proof. Secondly, we shall define the lambda calculus program that can be extracted from a proof term. These proof terms are generated in Minlog by applying the natural deduction calculus to a formula.  Finally we define what it means for a term to realize a formula.
+\item
 
-\subsection*{Type}
+
+\end{itemize}
+
+\end{myremark}
+
+\section{Type}
+
+In the following section we shall discuss the type of formulas. We shall begin by defining the type of a formula such that if the formula is proven the type corresponds to the type of the extracted program from the proof. Secondly, we shall define the lambda calculus program that can be extracted from a proof term. These proof terms are generated in Minlog by applying the natural deduction calculus to a formula.  Finally we define what it means for a term to realize a formula.
+
 In order to perform program extraction on a proof we must first deduce the
 type of the program to be extracted from a formula. To this end, every formula $A$ is assigned a type $\tau(A)$ which corresponds to the type of the program extracted from $A$. It is possible for a formula to have no computation content i.e. $\tau(A) = \epsilon$; such formulas are called \emph{Harrop formulas}.
 
@@ -307,7 +318,7 @@ a type of $\tau (B)$.
 \end{array} \right.
 \]
 
-\subsection*{The Extracted Program}
+\section{Program Extraction}
 Given a proof term it is possible to extract a program in the lambda calculus  that depends on the type of the term. We shall now give a case by case definition of the program extracted from a formula $\llbracket M \rrbracket$ which has a type $\tau (A)$. Where, $M$ is a derivation of the formula $A$ with $A$ having a defined type i.e. $ \tau (A) \neq \epsilon $.
 
 \[ \llbracket u^A \rrbracket := x^{\tau (A)}_{u} \text{uniquely associated with $u^A$}
@@ -395,7 +406,7 @@ f Nil = z
 f (x :: xs) = G x xs(f xs)
 \end{lstlisting}
 
-\subsection*{Realizability}
+\section{Realizability}
 We need to have a notion of what it means for an extracted program to realize
 a formula. The notion that we define to do this is called realizability which takes shape as a formula $r \textbf{r} A$. This can be read as
 a term $r$ realizes a formula $A$. If $\tau(A) \neq \epsilon$ then $r$ is of type $\tau (A)$,
@@ -445,7 +456,7 @@ r1 \ \textbf{r} \ A[x:= r0] & \quad \text{otherwise} \\
 
 
 
-
+\medskip
 
 \begin{mytheorem}
 \emph{(Soundness Theorem)}
@@ -456,6 +467,7 @@ If $M$ is a proof of a formula $B$, then we can derive  $ \llbracket M \rrbracke
 
 We begin the proof by performing induction on the proof term M.
 
+\begin{comment}
 \begin{description}
 
 \item[Case] $\lambda u^A M^B$ We must derive $$\llbracket \lambda u^A M^B
@@ -551,6 +563,8 @@ We begin the proof by performing induction on the proof term M.
 
 
 \end{description}
+\end{comment}
+
 \end{proof}
 
 \end{mytheorem}
