--- a/Introduction.tex
+++ b/Introduction.tex
@@ -32,7 +32,7 @@ The Railway Verification Group at the Computer Science Department of Swansea Uni
 \section{Results of the Thesis}
  
 
-The first result of this thesis (Chapter 4/5) is the use of program extraction to obtain a verified DPLL SAT solving algorithm that can solve industrial sized problems in the form of verifying solid state interlockings following the approach set out in \cite{AL14a}. We have named the resulting SAT solver X-SAT and show that its performance is comparable with other verified SAT algorithms. This case study opens up a new area of application for program extraction to obtain verified SAT and resolution algorithms and has been published in \cite{AL12,AL14b}. This is one of the largest case studies so far in the area of program extraction and demonstrates that the technique can be used for practical purposes.  One argument against the use of program extraction is that one loses control over the efficiency of the program. We have demonstrated that it is possible to carry out efficiency considerations at the proof level and therefore obtain a more efficient extracted program. 
+The first result of this thesis (Chapter 4/5) is the use of program extraction to obtain a verified DPLL SAT solving algorithm that can solve industrial sized problems in the form of verifying solid state interlockings following the approach set out in \cite{AL14a}. We have named the resulting SAT solver XSAT and show that its performance is comparable with other verified SAT algorithms. This case study opens up a new area of application for program extraction to obtain verified SAT and resolution algorithms and has been published in \cite{AL12,AL14b}. This is one of the largest case studies so far in the area of program extraction and demonstrates that the technique can be used for practical purposes.  One argument against the use of program extraction is that one loses control over the efficiency of the program. We have demonstrated that it is possible to carry out efficiency considerations at the proof level and therefore obtain a more efficient extracted program. 
 
 We also demonstrate that it is possible to modify the SAT proof system and extract a more advanced SAT algorithm that implements an optimisation called clause learning. Finally, we demonstrate that it is possible to extract a resolution algorithm based on our original DPLL SAT solver (end of chapter 4).
 
@@ -73,7 +73,7 @@ This paper is an extension of \cite{AL12}. We extract a resolution solver based 
 \medskip \\
 \textbf{\ul{Chapter 4}}: Proof of soundness and completeness for the DPLL and resolution proof systems. The completeness proofs are new.
 \medskip  \\
-\textbf{\ul{Chapter 5}}: Formalisation of the DPLL and Resolution proof systems along with their soundness and completeness (as described in Chapter 4) in the Minlog System. The proof of completeness for the DPLL proof system forms the basis of our extracted SAT solver X-SAT. The final part of this section describes the behaviour of the extracted program X-SAT which is compared with another verified solver. The formalisation and extraction presented in this section are new results.
+\textbf{\ul{Chapter 5}}: Formalisation of the DPLL and Resolution proof systems along with their soundness and completeness (as described in Chapter 4) in the Minlog System. The proof of completeness for the DPLL proof system forms the basis of our extracted SAT solver XSAT. The final part of this section describes the behaviour of the extracted program XSAT which is compared with another verified solver. The formalisation and extraction presented in this section are new results.
 \medskip \\ 
 \textbf{\ul{Chapter 6}}: Describes an approach to extract a prototype conflict driven clause learning SAT algorithm by modifying the DPLL proof system. This is a new formalisation.
 \medskip \\
