--- a/lit.bib
+++ b/lit.bib
@@ -111,6 +111,20 @@
   timestamp = {2014.04.01}
 }
 
+@INPROCEEDINGS{AH07,
+  author = {Amjad, H.},
+  title = {Compressing Propositional Refutations},
+  booktitle = {Automated Verification of Safety Critical Systems 2006},
+  year = {2007},
+  editor = {Nipkow, T. and Merz, S.},
+  volume = {185},
+  series = {Electronic Notes in Theoretical Computer Science},
+  pages = {3--15},
+  publisher = {Elsevier},
+  owner = {andylawrence},
+  timestamp = {2014.09.21}
+}
+
 @ARTICLE{EA02,
   author = {Astesiano, E. and Bidoit, M. and Kirchner, H. and Krieg-Br\"{u}ckner,
 	B. and Mosses, P. D. and Sannella, D. and Tarlecki, A.},
@@ -187,6 +201,17 @@
   title = {A study of railway ERTMS safety with Colored Petri Nets},
   booktitle = {The European Safety and Reliability Conference (ESREL'09)},
   year = {2009}
+}
+
+@ARTICLE{PB04,
+  author = {Beame, P. and Kautz, H. and Sabharwal, A.},
+  title = {Towards Understanding and Harnessing the Potential of Clause Learning},
+  journal = {Journal of Artificial Intelligence Research},
+  year = {2004},
+  volume = {22},
+  pages = {319--351},
+  owner = {andylawrence},
+  timestamp = {2014.09.21}
 }
 
 @INPROCEEDINGS{PB98,
@@ -1639,6 +1664,21 @@
   pages = {23--41},
   issue = {1},
   publisher = {ACM}
+}
+
+@ARTICLE{SR14,
+  author = {Rollini, S. F. and Bruttomesso, R. and Sharygina, N. and Tsitovich,
+	A.},
+  title = {Resolution Proof Transformation for Compression and Interpolation},
+  journal = {Formal Methods in System Design},
+  year = {2014},
+  volume = {45},
+  pages = {1--41},
+  number = {1},
+  month = {August},
+  owner = {andylawrence},
+  publisher = {Springer US},
+  timestamp = {2014.09.21}
 }
 
 @ARTICLE{Ls09,
